--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,28 @@ nav a:hover{
     color: #f5f5f5;
     background-color: #1E90FF;
 }
+
+/* Add to your existing styles.css */
+nav ul li {
+    position: relative;
+}
+
+nav ul li a.active {
+    color: #f5f5f5;
+    background-color: #1E90FF;
+}
+
+nav ul li a.active::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    height: 3px;
+    background-color: #f4a825;
+}
+
 .section-main{
     position: relative;
     height: 100vh;
