fix margin of h2 tag in media query

--- a/css/styles.css
+++ b/css/styles.css
@@ -987,7 +987,7 @@
 
     .about-header h2 {
         font-size: 2rem;
-        margin: 12.5rem 0 1.5rem 0;
+        /* margin: 12.5rem 0 1.5rem 0; */
     }
     .about-section {
         background-color: #f2f1f1;
