--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,20 @@ header {
   font-size: 1.1rem;
   margin-bottom: 1rem;
 }
+.cta-btn-home {
+  display: inline-block;
+  background-color: var(--primary);
+  padding: 0.8rem 1.8rem;
+  border-radius: 5px;
+  border-color: #e09417;
+  color: var(--light);
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 1.5rem;
+  transition: all 0.3s ease;
+}
 
 
 .cta-btn {
@@ -313,7 +327,6 @@ header {
   cursor: pointer;
   transition: all 0.3s ease;
   flex: 1;
-  min-width: 150px;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
