change img style

--- a/css/styles.css
+++ b/css/styles.css
@@ -724,15 +724,23 @@ Packages Section
   color: #333;
 }
 
-.team-member img {
+/* .team-member img {
   width: 150px;
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 1rem;
   border: 5px solid #f4a825;
+} */
+.team-member img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 0 auto 1rem; /* 👈 让图片水平居中 */
+  display: block;      /* 👈 让 margin auto 生效 */
+  border: 5px solid #f4a825;
 }
-
 /* Contact Page Styles */
 .contact-page {
   padding: 80px 5%;
